--- a/composer.json
+++ b/composer.json
@@ -7,11 +7,12 @@
     "require": {
         "php": ">=5.6.4",
         "doctrine/dbal": "^2.5",
-        "echowine/laravel-app": "*@dev",
         "guzzlehttp/guzzle": "*",
         "laravel/framework": "5.4.*",
         "laravel/passport": "^2.0",
-        "laravel/tinker": "~1.0"
+        "laravel/tinker": "~1.0",
+        "railken/laravel-application": "*@dev",
+        "railken/laravel-manager": "*@dev"
     },
     "require-dev": {
         "fzaninotto/faker": "~1.4",
